# advent-of-code

./: README.md
2023/rust-cargo/: Cargo.toml
2023/rust-cargo/src/: day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  lib.rs  main.rs
2023/rust-cargo/src/utils/: debug.rs  mod.rs  set.rs  vec.rs
2023/rust-cargo/src/utils/grid/: a_star.rs  mod.rs  traversal.rs
2023/rust-scripts/: day01.0.rs  day01.1.rs  day02.0.rs  day02.1.rs  day03.0.rs  day03.1.rs
2024/: README.md
2024/c/: aoc.h  day06.c  day07.c  day08.c  day09.c  day10.c  lamath.h  mdspan.h  runday  shared.h
2024/cpp/: day11.cpp  runday
2024/zig/: day01.zig  day02.zig  day03.zig  day04.zig  day05.zig
2024/zig/lib/: regez.h
