[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
arrayvec = "0.7.4"
bitvec = "1.0.1"
grid = "0.12.0"
itertools = "0.12.0"
nalgebra = "0.32.3"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
petgraph = "0.6.4"
regex = "1.10.2"
